# humber-event-app

./: README.md  alembic.ini  main.py  pyproject.toml  test-auth.html
EventsApp-main/: .gitignore  README.md  initial-plan.md
EventsApp-main/backend/: .env.example
EventsApp-main/backend/scripts/: seed_demo_events.py
EventsApp-main/backend/tests/: test_bootstrap.py
EventsApp-main/mobile-app/: .env  README.md  package-lock.json
EventsApp-main/mobile-app/__mocks__/: expo-image-picker.ts  firebase-auth.ts  react-native-msal.js
admin-dashboard/: README.md
diagrams/: app_start_flow.md  client_flow.md
mobile-app/: app.json  metro.config.js  package.json
mobile-app/__mocks__/: firebase-app.ts
mobile-app/__tests__/auth/: email-auth.test.ts  firebase-init.test.ts  sso.test.ts
mobile-app/__tests__/components/: EventCard.test.tsx  OrganizerEventEditor.test.tsx  RegistrationCard.test.tsx
mobile-app/__tests__/navigation/: tabs-layout.test.tsx
mobile-app/__tests__/screens/: approvals.test.tsx  event-detail.test.tsx  events.test.tsx  manage.test.tsx  profile.test.tsx  signup.test.tsx  users.test.tsx
mobile-app/app/: _layout.tsx
mobile-app/app/(auth)/: login.tsx
mobile-app/app/(tabs)/: _layout.tsx  approvals.tsx  (+2 more)
tests/: conftest.py  test_microsoft_callback.py  test_organizer_events.py
tests/adapters/: test_password_service.py
tests/api/: test_discovery_api.py  test_email_auth_api.py  test_identity_api.py
tests/application/: test_admin_event_service.py  test_auth_service.py  test_email_auth_support.py
tests/persistence/: test_user_repository.py
(+103 files in other folders)
