[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humber-event-hub"
version = "0.1.0"
description = "Backend foundation for Humber Event Hub."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "sqlalchemy==2.0.49",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.13.1",
    "python-multipart==0.0.26",
    "alembic==1.18.4",
    "uvicorn==0.42.0",
    "httpx==0.28.1",
    "Pillow==12.2.0",
    "PyJWT==2.10.1",
    "resend==2.10.0",
    "pytest==9.0.2",
    "bcrypt==4.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
